awx/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awx-web
spec:
  ingressClassName: tailscale
  rules:
    - host: awx.elephant-frog.ts.net
      http:
        paths:
          - backend:
              service:
                name: awx-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - awx.elephant-frog.ts.net
